--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,9 +1,10 @@
 // Variables
 
-$bg-color: #363F45;
-$primary: #FF5722;
-$primary-light: #FFCCBC;
+$bg-color: #1a2129;
+$primary: #dc3469;
+$primary-light: #d0a0aa;
 $primary-dark: #E64A19;
-$secondary: #03A9F4;
+$secondary: #cdc9c4;
+$secondary-light: #ede7e0;
 $text-color: #fff;
 
